--- a/css/Admin.css
+++ b/css/Admin.css
@@ -1,13 +1,3 @@
-.introBar {
-
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width:1350px;
-  height: 70px;
-  background: #336699;
-}
-
 .sidebar {
   position: fixed;
   top: 70px;
@@ -22,34 +12,6 @@
   margin: 20px;
 }
 
-.logout {
-
-  position: fixed;
-  top: 615px;
-  left: 1110px;
-  padding: 0 10px;
-  width: 222px;
-  height: 45px;
-  font-size: 18px;
-  font-weight: normal;
-  padding: 10px; 
-  color: #fff;
-  text-shadow: 0 1px #e3f1f1;
-  background: #ff3333;
-  border: 1px solid;
-  border-color: #b4ccce #b3c0c8 #9eb9c2;
-  cursor: pointer;
-  font-family: 'Lato', Arial, sans-serif;
-  @include box-sizing(content-box);
-  @include linear-gradient(top, #edf5f8, #cde5ef);
-  @include box-shadow(inset 0 1px white, 0 1px 2px rgba(black, .15));
-
-  &:active {
-    background: #009966;
-    border-color: #9eb9c2 #b3c0c8 #b4ccce;
-    @include box-shadow(inset 0 0 3px rgba(black, .2));
-  }
-}
 
 .imagebox {
 
@@ -58,7 +20,7 @@
   left: 20px;
   border: 1px solid;
   border-color: #b4ccce #b3c0c8 #9eb9c2;
-  background: #336699;
+  /*background: #336699*/;
   width: 180px;
   height: 180px;
 }
